--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,6 @@
 body
 {
+ 
     color: #333;
     text-align: left;
     font-family: "Arial";
@@ -7,10 +8,26 @@ body
     margin: 0;
     padding: 0;
 }
+#cabecera
+{
+    background: #33a;
+    box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.75) ;
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+}
+#cabecera #tagline
+{
+    margin: 0 0 0 1em ;
+    font-family: "normal";
+    font-size: 0.8em ;
+}
+
 #container
 {
     width: 70%;
-    padding: 1cm ;
+    padding: 0cm ;
     text-align: left;
     border: 1px solid  #DDD;
 
@@ -19,4 +36,8 @@ body
 {
     font-size:  20px;
 
+}
+#post
+{
+    padding: 1em;
 }
